--- a/index.html
+++ b/index.html
@@ -105,7 +105,8 @@
 
       <center><div id="selection_5"></div></center>
     </div>
-
+      <br><br>
+    <h2 class="title is-4">Consider the emissions through all these.</h2>
 
 
          <!--
