--- a/index.html
+++ b/index.html
@@ -6,7 +6,33 @@
     <link rel="stylesheet" href="css/exercice.css"  type="text/css" >
     <link rel="stylesheet" href="css/wavy.css"  type="text/css" >
 
+<style>
+  .image-container {
+  position: relative;
+}
 
+.image-container img {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+
+.image-container::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+
+.image-container:hover::before {
+  opacity: 1;
+}
+  </style?
 
 
     <script src="https://cdn.jsdelivr.net/npm/vega@5.22.1"></script>
@@ -108,8 +134,13 @@
 
     <br><br>
     <p>Consider the emissions through all these.</p>
+  
+  
+    <img>
 
-
+<div class="image-container">
+  <img src="data/Picture4.jpg" alt="Example Image">
+</div>
 
          <!--
     </section>
